force-app/main/default/objects/Patent__c/Patent__c.object-meta.xml
<CustomObject>
    <label>Patent</label>
    <nameField>
        <label>Patent Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>