force-app/main/default/objects/Patent__c/fields/Patent_Family__c.field-meta.xml
<CustomField>
    <fullName>Patent_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent Family</label>
    <referenceTo>Patent_Family__c</referenceTo>
    <relationshipLabel>Patents</relationshipLabel>
    <relationshipName>Patents</relationshipName>
    <type>Lookup</type>
</CustomField>