force-app/main/default/objects/Patent__c/fields/Patent_Strength__c.field-meta.xml
<CustomField>
    <fullName>Patent_Strength__c</fullName>
    <label>Patent Strength</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>