force-app/main/default/objects/Patent__c/fields/SEP_Declaration__c.field-meta.xml
<CustomField>
    <fullName>SEP_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEP Declaration</label>
    <type>Checkbox</type>
</CustomField>