force-app/main/default/objects/Patent__c/fields/SEP_SSO_Licensing_Policy__c.field-meta.xml
<CustomField>
    <fullName>SEP_SSO_Licensing_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEP SSO Licensing Policy</label>
    <type>Checkbox</type>
</CustomField>