force-app/main/default/objects/Patent__c/validationRules/Patent_Strength_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Patent_Strength_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Patent_Strength__c &gt; 100</errorConditionFormula>
    <errorMessage>Patent Strength must be between 0.00 and 100.00</errorMessage>
</ValidationRule>